Initial commit: React Native real estate app

--- a/app.json
+++ b/app.json
@@ -1,37 +1,70 @@
 {
   "expo": {
-    "name": "Real Estate App",
+    "name": "Eskan Real Estate",
     "slug": "real-estate",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.yourcompany.realestate"
+      "bundleIdentifier": "com.abbas.realestate",
+      "associatedDomains": [
+        "applinks:eskan-real-estate-backend.onrender.com",
+        "applinks:mmgfvjfgstcpqmlhctlw.supabase.co"
+      ]
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.yourcompany.realestate"
+      "package": "com.abbas.realestate",
+      "versionCode": 1,
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            {
+              "scheme": "https",
+              "host": "eskan-real-estate-backend.onrender.com",
+              "pathPrefix": "/auth"
+            },
+            {
+              "scheme": "https",
+              "host": "mmgfvjfgstcpqmlhctlw.supabase.co",
+              "pathPrefix": "/auth/v1/verify"
+            }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
+      ]
     },
-    "extra": {
-      "eas": {
-        "projectId": "your-project-id"
-      }
+    "web": {
+      "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      "expo-image-picker",
-      "expo-notifications"
-    ]
+      "expo-router"
+    ],
+    "scheme": "realestate",
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "8a13c8de-9fc5-44ef-a794-077c8b0b0161"
+      },
+      "WS_URL": "wss://eskan-real-estate-backend.onrender.com"
+    },
+    "owner": "abbas_skaiki"
   }
 }
